# aow4_mcp

./: .coverage  .gitignore  CODEBUDDY.md  README.md  aow4_mcp.py  main.py  prompts  pyproject.toml
.codebuddy/: config.yaml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
aow4_tome/: SKILL.md
docs/adr/: 001-playwright-choice.md
samples/: test1.md  test2.md
specs/002-aow4-tome-scraper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-aow4-tome-scraper/checklists/: requirements.md
specs/002-aow4-tome-scraper/contracts/: cli-interface.md
src/: __init__.py  cli.py  config.py  exceptions.py
src/models/: __init__.py  tome.py  tome_detail.py  tome_skill.py
src/parsers/: __init__.py  tome_detail_parser.py  tome_list_parser.py
src/services/: __init__.py  cache_manager.py  tome_service.py  wiki_client.py
src/utils/: __init__.py  roman_numerals.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli.py  test_tome_service.py
tests/unit/: test_cache_manager.py  test_roman_numerals.py  test_tome_detail_model.py  test_tome_detail_parser.py  test_tome_list_parser.py  test_tome_model.py  test_wiki_client.py
