[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aow4-mcp"
version = "0.1.0"
description = "AOW4 Tome Scraper - CLI tool to fetch and cache Age of Wonders 4 Tome information"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "playwright>=1.40.0",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]

[tool.setuptools.package-dir]
"" = "."

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "fakeredis>=2.20.0",
    "mypy>=1.0.0",
    "types-beautifulsoup4",
    "types-redis",
]

[project.scripts]
aow4-tome = "src.cli:app"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
